tidy project and add fontawesome

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,21 +4,35 @@ project(mplayer VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 6.5 REQUIRED COMPONENTS Quick Multimedia)
+find_package(Qt6 6.5 REQUIRED COMPONENTS Quick Multimedia Widgets Gui)
 
 qt_standard_project_setup(REQUIRES 6.5)
 
 qt_add_executable(appmplayer
     main.cpp
+        trackplaylist.cpp
+        trackplaylist.h
+        metadatafields.cpp
+        metadatafields.h
+        playerutils.cpp
+        playerutils.h
+        corplayer.cpp
+        corplayer.h
 )
 
 qt_add_qml_module(appmplayer
     URI mplayer
     VERSION 1.0
     QML_FILES
-        Main.qml
-        SOURCES MediaPlayer.h MediaPlayer.cpp
-        SOURCES MetadataManager.h MetadataManager.cpp
+        qml/Main.qml
+        qml/PlaybackControl.qml
+        qml/TrackControl.qml
+    SOURCES
+        mediaplayerwrapper.h mediaplayerwrapper.cpp
+    RESOURCES
+        fonts.qrc
+        QML_FILES qml/components/IconRoundButton.qml
+        SOURCES activetrackmanager.h activetrackmanager.cpp
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
@@ -36,6 +50,8 @@ target_link_libraries(appmplayer
     PRIVATE
     Qt6::Quick
     Qt6::Multimedia
+    Qt6::Widgets
+    Qt6::Gui
 )
 
 include(GNUInstallDirs)
