--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.16)
 project(CorPlayer VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt6 6.5 REQUIRED COMPONENTS Quick Multimedia Widgets Gui)
@@ -35,6 +36,7 @@ qt_add_executable(appCorPlayer
         trackmetadatamanager.h
         filescanner.cpp
         filescanner.h
+        fonts/fonts.qrc
 )
 
 qt_add_qml_module(appCorPlayer
@@ -47,9 +49,8 @@ qt_add_qml_module(appCorPlayer
         qml/components/IconRoundButton.qml
         qml/components/StepSlider.qml
         qml/components/DurationSlider.qml
-        RESOURCES
-        fonts.qrc
 )
+
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
@@ -69,6 +70,14 @@ target_link_libraries(appCorPlayer
         Qt6::Widgets
         Qt6::Gui
 )
+
+## Create a local directory for fonts in the build/install directory
+#set(FONT_INSTALL_DIR "${CMAKE_BINARY_DIR}/fonts")
+#file(MAKE_DIRECTORY "${FONT_INSTALL_DIR}")
+#file(COPY ${CMAKE_SOURCE_DIR}/qml/fonts/ DESTINATION ${FONT_INSTALL_DIR})
+#install(DIRECTORY ${CMAKE_BINARY_DIR}/fonts/
+#        DESTINATION ${CMAKE_INSTALL_PREFIX}/fonts
+#        FILES_MATCHING PATTERN "*.otf")
 
 include(GNUInstallDirs)
 install(TARGETS appCorPlayer
