feat/add a library concept, multiple playlists support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,10 @@
 set(PROJECT_SOURCES
+    activetrackmanager.cpp
+    activetrackmanager.h
     asynccoverprovider.cpp
     asynccoverprovider.h
     corplayer.cpp
     corplayer.h
-    activetrackmanager.cpp
-    activetrackmanager.h
     mediaplayerwrapper.cpp
     mediaplayerwrapper.h
     metadata.cpp
@@ -15,22 +15,6 @@ set(PROJECT_SOURCES
     playerutils.hpp
     trackprogresswatchdog.cpp
     trackprogresswatchdog.h
-    trackswatchdog.cpp
-    trackswatchdog.h
-    filescanner.cpp
-    filescanner.h
-
-    playlist/playlistmodel.cpp
-    playlist/playlistmodel.hpp
-    playlist/trackplaylistproxymodel.cpp
-    playlist/trackplaylistproxymodel.h
-    playlist/playlistparser.cpp
-    playlist/playlistparser.h
-
-    taglib/tagreader.cpp
-    taglib/tagreader.h
-    taglib/tracktags.cpp
-    taglib/tracktags.h
 
     database/basedatabase.cpp
     database/basedatabase.h
@@ -38,18 +22,41 @@ set(PROJECT_SOURCES
     database/cordatabase.h
     database/databasemanager.cpp
     database/databasemanager.h
-    database/dbconnectionpool.cpp
-    database/dbconnectionpool.h
-    database/trackdatabase.cpp
-    database/trackdatabase.h
     database/dbconnection.cpp
     database/dbconnection.h
+    database/dbconnectionpool.cpp
+    database/dbconnectionpool.h
     database/dbschema.cpp
     database/dbschema.h
+    database/playlistdatabase.cpp
+    database/playlistdatabase.h
     database/sqlquery.cpp
     database/sqlquery.h
     database/sqltransaction.cpp
     database/sqltransaction.h
+    database/trackdatabase.cpp
+    database/trackdatabase.h
+
+    library/filescanner.cpp
+    library/filescanner.h
+    library/library.cpp
+    library/library.hpp
+    library/playlistparser.cpp
+    library/playlistparser.h
+
+    models/playlistcollectionmodel.cpp
+    models/playlistcollectionmodel.hpp
+    models/playlistmodel.cpp
+    models/playlistmodel.hpp
+    models/playlistproxymodel.cpp
+    models/playlistproxymodel.hpp
+    models/trackcollectionmodel.cpp
+    models/trackcollectionmodel.hpp
+
+    taglib/tagreader.cpp
+    taglib/tagreader.h
+    taglib/tracktags.cpp
+    taglib/tracktags.h
 )
 
 add_library(CorPlayerCore
@@ -65,12 +72,16 @@ qt_add_qml_module(CorPlayerCore
     qml/Main.qml
     qml/PlaybackControl.qml
     qml/PlaybackControlBar.qml
+    qml/TrackBrowser.qml
+
+    qml/dialogs/DeletePlaylistDialog.qml
+    qml/dialogs/NewPlaylistDialog.qml
+    qml/dialogs/RenamePlaylistDialog.qml
 
     qml/components/DurationSlider.qml
     qml/components/IconButton.qml
     qml/components/IconButtonWithBackground.qml
     qml/components/ImageWithFallback.qml
-    qml/components/PlaylistTrackItem.qml
     qml/components/StepSlider.qml
     qml/components/TrackInfo.qml
     qml/components/VolumeControl.qml
@@ -80,7 +91,8 @@ target_include_directories(CorPlayerCore
     PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/database
-    ${CMAKE_CURRENT_SOURCE_DIR}/playlist
+    ${CMAKE_CURRENT_SOURCE_DIR}/library
+    ${CMAKE_CURRENT_SOURCE_DIR}/models
     ${CMAKE_CURRENT_SOURCE_DIR}/taglib
 )
 
